# drillsargeant

./: .firebaserc  .gitignore  BROWSER_EXTENSION_VS_DESKTOP_ANALYSIS.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  ENHANCED_DEVELOPMENT_PLAN.md  GETTING_STARTED.md  LICENSE  MOBILE_DEVELOPMENT_PLAN.md  PRODUCTION_READY_SUMMARY.md  README.md  SYSTEM_FUNCTION_INVENTORY.md  firebase-config.md  firebase.json  firestore.indexes.json  firestore.rules  memory_bank.md  package-lock.json  package.json  rcbackend  release-notes.md  setup-next-steps.md  test.html  tsconfig.json
.github/workflows/: deploy.yml
dataconnect/: dataconnect.yaml
desktop/: TODO.md  index.html  package.json
desktop/src/: main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/analysis/: advanced-mobile-analyzer.ts  ast-analyzer.ts  enhanced-analyzer.ts  enhanced-mobile-security.ts  mobile-analyzer.ts  mobile-dependency-analyzer.ts  mobile-duplication-detector.ts  mobile-file-watcher.ts  report-generator.ts
desktop/src/types/: css-tree.d.ts
memory_bank/: IMPLEMENTATION_ROADMAP.md  INTERACTIVE_CODE_REVIEW.md  README.md  RESEARCH_FINDINGS.md  TECHNICAL_ARCHITECTURE.md  memory_bank.md
scripts/: setup-firebase.js
src/backend/: .env.example  env  init-database.js  package-lock.json  package.json  setup-env.js  tsconfig.json
src/backend/src/: index.ts
src/frontend/: .env.example  env  firebase-config-template.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/public/: index.html
src/frontend/src/: App.tsx  (+1 more)
(+41 files in other folders)
