[package]
name = "drillsargeant-desktop"
version = "1.0.0"
description = "DrillSargeant Desktop - Professional Code Analysis Tool"
authors = ["DrillSargeant Team"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"

